# ai-edge

./: .env.example  .env.local.example  .gitignore  DEMO.md  PHASE1-VERIFICATION-REPORT.md  PLAN.md  README.md  package.json  pnpm-lock.yaml  turbo.json  vercel.ts
apps/api/: pyproject.toml
apps/api/src/ai_edge_api/: __init__.py  main.py
apps/api/src/ai_edge_api/schemas/: __init__.py  brand_truth.py
apps/web/: middleware.ts  next.config.mjs  package.json  tsconfig.json  vercel.ts  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/actions/: admin-actions.ts  aio-actions.ts  audit-actions.ts  audit-diff-actions.ts  brand-truth-actions.ts  competitor-actions.ts  compliance-actions.ts  content-scan-actions.ts  entity-actions.ts  export-actions.ts  firm-actions.ts  gsc-actions.ts  reddit-actions.ts  reddit-constants.ts  report-actions.ts  (+9 more)
apps/web/scripts/: backfill-legacy-ticket-prescription.ts  backfill-untagged-tickets.ts  check-aio.ts  check-cron-runs.ts  check-untagged-tickets.ts  demo-cellino.ts  purge-stale-aio.ts  research-operator-experience.ts  research-q2-fixup.ts  score-recompute.ts  seed-cellino.ts  sweep-and-anchor-apl.ts  test-bootstrap.ts  verify-c1-repositioning.ts  verify-c1-suppression.ts
apps/worker/: pyproject.toml
apps/worker/src/ai_edge_worker/: __init__.py  main.py
docs/: decisions.md  design-brand-truth-bootstrap.md  design-sop-engine.md  procurement-checklist.md  seed-brand-truth-cellino.json  seed-brand-truth-clixsy.json  seed-brand-truth-reimer.json
infra/playwright-aio-worker/: Dockerfile  README.md  fly.toml.example  package.json  server.js
tmp/: operator-experience-research.md
(+168 files in other folders)
