[project]
name = "ai-edge-worker"
version = "0.0.0"
description = "AI Edge worker fleet — LangGraph + Playwright + PRAW on Fly.io."
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "sqlalchemy>=2.0.35",
  "asyncpg>=0.29.0",
  "httpx>=0.27.0",
  "langgraph>=0.2.40",
  "playwright>=1.47.0",
  "praw>=7.7.1",
  "sentence-transformers>=3.2.0",
  "readability-lxml>=0.8.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_edge_worker"]

[tool.ruff]
line-length = 100
target-version = "py312"
